--- a/helm/harvester/values/values-lsst-prod.yaml
+++ b/helm/harvester/values/values-lsst-prod.yaml
@@ -18,6 +18,12 @@ harvester:
     selector: false
     size: 3000Gi
 
+  persistentvolumespecial:
+    mount: true
+    class: sdf-data-rubin
+    path: "/mnt/harvester-data"
+    size: 5Gi
+
   experiment: "lsst_prod"
   panda:
     host: "panda-server:443"
