PANDA_BEHIND_REAL_LB in panda

--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -14,6 +14,7 @@ stringData:
 
   PANDA_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
   PANDA_URL_SSL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
+  PANDA_BEHIND_REAL_LB: "1"
   PANDA_VERIFY_HOST: "off"
   PANDA_AUTH: "oidc"
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
