Adding list of bigmon extra apps

--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -24,6 +24,8 @@ stringData:
   {{- else }}
   BIGMON_DEBUG: "False"
   {{- end }}
+  # list of bigmon extra apps
+  BIGMON_INSTALLED_APPS_LIST: "{{ .Values.bigmon.bigmon_extra }}"
 
   LOGS_PROVIDER: "{{ .Values.bigmon.logs_provider | default "rucio" }}"
 
