update harvester with srun

--- a/helm/harvester/charts/harvester/templates/configmap.yaml
+++ b/helm/harvester/charts/harvester/templates/configmap.yaml
@@ -41,6 +41,11 @@ data:
   {{- end }}
   {{- end }}
 
+  {{- if .Values.persistentvolumespecial.mount }}
+  SPECIAL_MOUNT_POINT: {{ .Values.persistentvolumespecial.path }}
+  SPECIAL_LOG_MOUNT_POINT: {{ .Values.persistentvolumespecial.logpath }}
+  {{- end }}
+
 ---
 # sandbox
 apiVersion: v1
