--- a/helm/harvester/charts/harvester/templates/statefulset.yaml
+++ b/helm/harvester/charts/harvester/templates/statefulset.yaml
@@ -197,8 +197,8 @@ spec:
               chmod -R 777 /var/log/harvester_wdirs;
               chmod -R 777 /var/log/condor_logs;
               ln -s /var/log/condor_logs /var/www/html/;
-              if [ -d /mnt/harvester-data/panda_jobs/harvester_workdir_k8s/harvester_wdirs/SLAC_Harvester_SDF ]; then
-                  ln -s /mnt/harvester-data/panda_jobs/harvester_workdir_k8s/harvester_wdirs/SLAC_Harvester_SDF /var/www/html/condor_logs/;
+              if [ -d ${SPECIAL_LOG_MOUNT_POINT} ]; then
+                  ln -s ${SPECIAL_LOG_MOUNT_POINT} /var/www/html/condor_logs/;
               fi;
               runuser -u atlpan -g zp -- /opt/harvester/etc/rc.d/init.d/run-harvester-services;
               {{- end }}
@@ -235,7 +235,7 @@ spec:
               mountPath: /opt/harvester/etc/certs
             {{- if .Values.persistentvolumespecial.mount }}
             - name: {{ include "harvester.fullname" . }}-special-data
-              mountPath: /mnt/harvester-data
+              mountPath: {{ .Values.persistentvolumespecial.path }}
             {{- end }}
           envFrom:
             - configMapRef:
