--- a/helm/iam-db/charts/backup/values.yaml
+++ b/helm/iam-db/charts/backup/values.yaml
@@ -1,53 +1,25 @@
-# Default values for harvester.
+# Default values for main.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
+  # repository: ghcr.io/hsf/idds
   repository: ghcr.io/hsf/harvester
-  pullPolicy: Always
-  tag: latest
+  pullPolicy: "IfNotPresent"
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "latest"
 
 # start the service when pod gets started
 autoStart: true
 
-# experiment to use to init and setup crons
-experiment: ""
-
-# http proxy
-httpProxy: ""
-httpsProxy: ""
-
 # run with non-root pid
 noRoot: false
 
-service:
-  type: ClusterIP
-  httpPort: 80
-  httpsPort: 443
-
-persistentvolume:
-  create: true
-  class: manual
-  path: "/mnt/harvester-logs"
-  size: 5Gi
-  selector: true
-
-persistentvolumecondor:
-  create: true
-  class: manual
-  path: "/mnt/harvester-condor-logs"
-  size: 5Gi
-  selector: true
-
 persistentvolumespecial:
   mount: false
-  class: manual
-  path: "/mnt/harvester-data"
-  logpath: "/mnt/harvester-data/panda_jobs"
-  size: 5Gi
-  selector: true
+  size: 100Gi
 
 imagePullSecrets: []
 nameOverride: ""
@@ -75,17 +47,25 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+service:
+  type: ClusterIP
+  httpsPort: 8443
+  httpPort: 8080
+
+ingress:
+  enabled: false
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
+  #   cpu: 4000m
+  #   memory: 16Gi
   # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  #   cpu: 4000m
+  #   memory: 16Gi
 
 autoscaling:
   enabled: false
@@ -99,6 +79,3 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
-
-route:
-  enabled: false
