--- a/helm/panda/charts/jedi/sandbox/jedi_mq_config.json
+++ b/helm/panda/charts/jedi/sandbox/jedi_mq_config.json
@@ -13,6 +13,14 @@
         "jedi_taskstatus": {
             "server": "internal_mb",
             "destination": "/queue/self.jedi_taskstatus"
+        },
+	        "jedi_contents_feeder": {
+            "server": "internal_mb",
+            "destination": "/queue/jedi_contents_feeder"
+        },
+        "jedi_job_generator": {
+            "server": "internal_mb",
+            "destination": "/queue/jedi_job_generator"
         }
     }
 }
