--- a/helm/panda/charts/server/sandbox/panda_mbproxy_config.json
+++ b/helm/panda/charts/server/sandbox/panda_mbproxy_config.json
@@ -17,6 +17,25 @@
             "username": "panda",
             "passcode": "${PANDA_ACTIVEMQ_PASSWD_panda}",
             "verbose": true
+        },
+        "internal_mb": {
+            "host_port_list": ["${PANDA_ACTIVEMQ_LIST}"],
+            "use_ssl": false,
+            "cert_file": null,
+            "key_file": null,
+            "username": "panda",
+            "passcode": "${PANDA_ACTIVEMQ_PASSWD_panda}",
+            "vhost": "/",
+            "verbose": true
+        },
+        "pilot_mb": {
+            "host_port_list": ["${PANDA_ACTIVEMQ_LIST}"],
+            "use_ssl": false,
+            "cert_file": null,
+            "key_file": null,
+            "username": "panda",
+            "passcode": "${PANDA_ACTIVEMQ_PASSWD_panda}",
+            "verbose": true
         }
     },
     "queues": {
@@ -28,12 +47,12 @@
             "server": "panda_mb",
             "destination": "/queue/panda_jedi"
         },
-        "panda_pilot_queue": {
-            "server": "panda_mb",
+        "panda_pilot_queue_1": {
+            "server": "pilot_mb",
             "destination": "/queue/panda_pilot"
         },
-        "panda_pilot_topic": {
-            "server": "panda_mb",
+        "panda_pilot_topic_1": {
+            "server": "pilot_mb",
             "destination": "/topic/panda_pilot"
         }
     }
