--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -17,7 +17,10 @@ stringData:
   {{- if .Values.harvester.database.dbhost_domain }}
   HARVESTER_DB_HOST_DOMAIN: "{{ .Values.harvester.database.dbhost_domain }}"
   {{- end }}
+  {{- end }}
+  {{- if .Values.harvester.database.db_add_index }}
   {{- if .Values.harvester.database.name_prefix }}
+  HARVESTER_DB_ADD_INDEX: "{{ .Values.harvester.database.db_add_index }}"
   MARIADB_DATABASE_PREFIX: "{{ .Values.harvester.database.name_prefix }}"
   {{- end }}
   {{- end }}
@@ -79,3 +82,32 @@ data:
   {{- end }}
 
 {{- end }}
+
+---
+# init db
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "secrets.fullname" . }}-harvester-initdb
+type: Opaque
+stringData:
+  init_harvester_db.sql: |-
+    {{- $harvestername := .Values.harvester.database.name | default "harvester" }}
+    {{- $harvesteruser := .Values.harvester.database.user | default "harvester" }}
+    {{- $harvesterpass := .Values.harvester.database.password | default "harvester" }}
+
+    CREATE DATABASE {{$harvestername}};
+    CREATE USER '{{$harvesteruser}}'@'%' IDENTIFIED BY '{{$harvesterpass}}';
+    GRANT ALL PRIVILEGES ON {{$harvestername}}.* TO '{{$harvesteruser}}'@'localhost';
+    GRANT ALL PRIVILEGES ON {{$harvestername}}.* TO '{{$harvesteruser}}'@'%';
+
+    {{- $count := (.Values.harvester.replicaCount | int) }}
+    {{- if $count }}
+    {{- range $i, $_ := until $count }}
+    {{- $harvestername_int := printf "%s_%d" $harvestername $i }}
+    CREATE DATABASE {{ $harvestername_int }};
+    GRANT ALL PRIVILEGES ON {{ $harvestername_int }}.* TO '{{$harvesteruser}}'@'localhost';
+    GRANT ALL PRIVILEGES ON {{ $harvestername_int }}.* TO '{{$harvesteruser}}'@'%';
+    {{- end}}
+    {{- end}}
+    FLUSH PRIVILEGES;
