--- a/secrets/templates/iam.yaml
+++ b/secrets/templates/iam.yaml
@@ -48,7 +48,9 @@ stringData:
 
   IAM_BASE_URL: "{{ .Values.iam.base_url}}"
   IAM_ISSUER: "{{ .Values.iam.base_url}}"
-  IAM_USE_FORWARDED_HEADERS: "true"
+  # IAM_USE_FORWARDED_HEADERS: "true"
+  IAM_FORWARD_HEADERS_STRATEGY: "native"
+  # IAM_FORWARD_HEADERS_STRATEGY: "none"
   IAM_KEY_STORE_LOCATION: "file:///indigo-iam/config//iam-keystore.jwks"
 
   IAM_MAIL_HOST: "smtp.cern.ch"
