--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -90,6 +90,7 @@ harvester:
     dbhost_prefix: ""
     dbhost_domain: ""
     # database name prefix
+    db_add_index: ""
     name_prefix: ""
 
   # condor channel: 9, stable, or latest
