--- a/helm/bigmon/charts/main/values.yaml
+++ b/helm/bigmon/charts/main/values.yaml
@@ -56,6 +56,7 @@ ingress:
   className: ""
   annotations:
     kubernetes.io/ingress.class: nginx
+    spec.ingressClassName: nginx
     # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/secure-backends: "true"
