--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -67,7 +67,7 @@
       "module": "pandaharvester.harvesterthrottler.tiny_throttler",
       "logicType": "OR",
       "rulesForMissed": [{"level": "site", "timeWindow": 10, "maxMissed": 50}],
-      "rulesForSiteSubmittedRunning":[{"level": "cores", "maxCores": 1000}]
+      "rulesForSiteFamilySubmittedRunning":[{"level": "cores", "maxCores": 1000}]
     }
   },
 
@@ -141,7 +141,7 @@
       "module": "pandaharvester.harvesterthrottler.tiny_throttler",
       "logicType": "OR",
       "rulesForMissed": [{"level": "site", "timeWindow": 10, "maxMissed": 50}],
-      "rulesForSiteSubmittedRunning":[{"level": "cores", "maxCores": 1000}]
+      "rulesForSiteFamilySubmittedRunning":[{"level": "cores", "maxCores": 1000}]
     }
   },
 
@@ -319,7 +319,7 @@
   },
 
   "SLAC_Rubin": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
@@ -350,7 +350,7 @@
   },
 
   "SLAC_Rubin_Medium": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
@@ -381,7 +381,7 @@
   },
 
   "SLAC_Rubin_Himem": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
@@ -412,7 +412,7 @@
   },
 
   "SLAC_Rubin_Big_Himem": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
@@ -443,7 +443,7 @@
   },
 
   "SLAC_Rubin_Extra_Himem": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
@@ -470,8 +470,36 @@
       }
   },
 
+  "SLAC_Rubin_IO": {
+    "queueStatus": "offline",
+    "site": "SLAC",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.push",
+    "maxWorkers": 100,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":100,
+    "nQueueLimitJobMin":50,
+    "nQueueLimitJob": 100,
+    "nQueueLimitWorker":100,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PUSH",
+          "ceQueueName": "rubin_extra_himem",
+          "ceARCGridType": "arc",
+          "ceHostname": ["sdfarcce001.slac.stanford.edu", "sdfarcce001.slac.stanford.edu"],
+          "ceEndpoint": ["https://sdfarcce001.slac.stanford.edu:9443/arex/rest/1.0",
+                         "https://sdfarcce001.slac.stanford.edu:9444/arex/rest/1.0"],
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push_96.sdf"
+      }
+  },
+
   "SLAC_Rubin_Merge": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "site": "SLAC",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
@@ -674,6 +702,34 @@
           "ceQueueName": "lsst",
           "ceARCGridType": "arc",
 	  "ceHostname": ["ccarcce01.in2p3.fr", "ccarcce02.in2p3.fr"],
+          "ceEndpoint": ["https://ccarcce01.in2p3.fr:9443/arex/rest/1.0",
+                         "https://ccarcce02.in2p3.fr:9443/arex/rest/1.0"],
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push_96.sdf"
+      }
+  },
+
+  "CC-IN2P3_Rubin_IO": {
+    "queueStatus": "online",
+    "site": "CC-IN2P3",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.push",
+    "maxWorkers": 100,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":100,
+    "nQueueLimitJobMin":50,
+    "nQueueLimitJob": 100,
+    "nQueueLimitWorker":100,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PUSH",
+          "ceQueueName": "lsst",
+          "ceARCGridType": "arc",
+          "ceHostname": ["ccarcce01.in2p3.fr", "ccarcce02.in2p3.fr"],
           "ceEndpoint": ["https://ccarcce01.in2p3.fr:9443/arex/rest/1.0",
                          "https://ccarcce02.in2p3.fr:9443/arex/rest/1.0"],
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push_96.sdf"
@@ -884,6 +940,33 @@
       }
   },
 
+  "LANCS_Rubin_IO": {
+    "queueStatus": "online",
+    "site": "LANCS",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.push",
+    "maxWorkers": 100,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":100,
+    "nQueueLimitJobMin":50,
+    "nQueueLimitJob": 100,
+    "nQueueLimitWorker":100,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PUSH",
+          "ceQueueName": "grid",
+          "ceARCGridType": "arc",
+          "ceHostname": "grendel2.hec.lancs.ac.uk",
+          "ceEndpoint": "https://grendel2.hec.lancs.ac.uk:443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push_96.sdf"
+      }
+  },
+
   "LANCS_Rubin_Merge": {
     "queueStatus": "online",
     "site": "LANCS",
@@ -907,6 +990,244 @@
           "ceARCGridType": "arc",
 	  "ceHostname": "grendel2.hec.lancs.ac.uk",
           "ceEndpoint": "https://grendel2.hec.lancs.ac.uk:443/arex/rest/1.0",
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push.sdf"
+      }
+  },
+
+  "RAL_TEST": {
+      "queueStatus": "online",
+      "site": "RAL",
+      "prodSourceLabel": "managed",
+      "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+      "templateQueueName": "production.pull",
+      "maxWorkers": 300,
+      "maxNewWorkersPerCycle":50,
+      "nQueueLimitWorkerMin":1,
+      "nQueueLimitWorkerMax": 50,
+      "nQueueLimitJobMax":200,
+      "nQueueLimitJobMin":100,
+      "nQueueLimitJob": 200,
+      "nQueueLimitWorker":200,
+
+      "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "nCoreFactor": 8,
+          "activateWorkerFactor": 0.125,
+          "noPilotsWhenNoActiveJobs": false,
+          "ceQueueName": "EL9",
+          "ceARCGridType": "arc",
+          "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
+          "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
+                         "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_srun.sdf"
+      }
+  },
+
+  "RAL_Rubin": {
+      "queueStatus": "online",
+      "site": "RAL",
+      "prodSourceLabel": "managed",
+      "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+      "templateQueueName": "production.pull",
+      "maxWorkers": 300,
+      "maxNewWorkersPerCycle":50,
+      "nQueueLimitWorkerMin":1,
+      "nQueueLimitWorkerMax": 50,
+      "nQueueLimitJobMax":200,
+      "nQueueLimitJobMin":100,
+      "nQueueLimitJob": 200,
+      "nQueueLimitWorker":200,
+
+      "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "nCoreFactor": 8,
+          "activateWorkerFactor": 0.125,
+          "noPilotsWhenNoActiveJobs": false,
+          "submitMode": "PULL",
+          "ceQueueName": "EL9",
+          "ceARCGridType": "arc",
+          "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
+          "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
+                         "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_srun.sdf"
+      }
+  },
+
+  "RAL_Rubin_Medium": {
+    "queueStatus": "online",
+    "site": "RAL",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.pull",
+    "maxWorkers": 300,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":200,
+    "nQueueLimitJobMin":100,
+    "nQueueLimitJob": 200,
+    "nQueueLimitWorker":200,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "nCoreFactor": 4,
+          "activateWorkerFactor": 0.25,
+          "noPilotsWhenNoActiveJobs": false,
+          "submitMode": "PULL",
+          "ceQueueName": "EL9",
+          "ceARCGridType": "arc",
+          "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
+          "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
+                         "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_srun.sdf"
+      }
+  },
+
+  "RAL_Rubin_Himem": {
+    "queueStatus": "online",
+    "site": "RAL",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.pull",
+    "maxWorkers": 400,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":200,
+    "nQueueLimitJobMin":100,
+    "nQueueLimitJob": 200,
+    "nQueueLimitWorker":200,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "nCoreFactor": 2,
+          "activateWorkerFactor": 0.5,
+          "noPilotsWhenNoActiveJobs": false,
+          "submitMode": "PULL",
+          "ceQueueName": "EL9",
+          "ceARCGridType": "arc",
+          "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
+          "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
+                         "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_srun.sdf"
+      }
+  },
+
+  "RAL_Rubin_Big_Himem": {
+    "queueStatus": "online",
+    "site": "RAL",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.pull",
+    "maxWorkers": 400,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":200,
+    "nQueueLimitJobMin":100,
+    "nQueueLimitJob": 200,
+    "nQueueLimitWorker":200,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "nCoreFactor": 1,
+          "activateWorkerFactor": 1.0,
+          "noPilotsWhenNoActiveJobs": false,
+          "submitMode": "PULL",
+          "ceQueueName": "EL9",
+          "ceARCGridType": "arc",
+          "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
+          "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
+                         "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_srun.sdf"
+      }
+  },
+
+  "RAL_Rubin_Extra_Himem": {
+    "queueStatus": "online",
+    "site": "RAL",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.push",
+    "maxWorkers": 1500,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":200,
+    "nQueueLimitJobMin":100,
+    "nQueueLimitJob": 200,
+    "nQueueLimitWorker": 50,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PUSH",
+          "ceQueueName": "EL9",
+          "ceARCGridType": "arc",
+          "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
+          "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
+                         "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push_96.sdf"
+      }
+  },
+
+  "RAL_Rubin_IO": {
+    "queueStatus": "online",
+    "site": "RAL",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.push",
+    "maxWorkers": 100,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":100,
+    "nQueueLimitJobMin":50,
+    "nQueueLimitJob": 100,
+    "nQueueLimitWorker": 50,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PUSH",
+          "ceQueueName": "EL9",
+          "ceARCGridType": "arc",
+          "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
+          "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
+                         "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push_96.sdf"
+      }
+  },
+
+  "RAL_Rubin_Merge": {
+    "queueStatus": "online",
+    "site": "RAL",
+    "prodSourceLabel": "managed",
+    "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
+    "templateQueueName": "production.push",
+    "maxWorkers": 200,
+    "maxNewWorkersPerCycle":50,
+    "nQueueLimitWorkerMin":1,
+    "nQueueLimitWorkerMax": 50,
+    "nQueueLimitJobMax":200,
+    "nQueueLimitJobMin":100,
+    "nQueueLimitJob": 200,
+    "nQueueLimitWorker": 50,
+
+    "submitter": {
+          "nCore": 1,
+          "nCorePerNode": 1,
+          "submitMode": "PUSH",
+          "ceQueueName": "EL9",
+          "ceARCGridType": "arc",
+          "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
+          "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
+                         "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
           "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_push.sdf"
       }
   },
