--- a/helm/harvester/values/values-lsst-prod.yaml
+++ b/helm/harvester/values/values-lsst-prod.yaml
@@ -22,6 +22,7 @@ harvester:
     mount: true
     class: sdf-data-rubin
     path: "/mnt/harvester-data"
+    logpath: "/mnt/harvester-data/panda_jobs/harvester_workdir_k8s/harvester_wdirs/SLAC_Harvester_SDF"
     size: 5Gi
 
   experiment: "lsst_prod"
@@ -31,7 +32,7 @@ harvester:
     enabled: true
 
 mariadb:
-  enabled: false
+  enabled: true
   persistentvolume:
     class: wekafs--sdf-k8s01
     create: false
