--- a/helm/iam-db/charts/backup/Chart.yaml
+++ b/helm/iam-db/charts/backup/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: iam-db
+name: backup
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -22,14 +22,3 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
-
-
-dependencies:
-    - name: mariadb
-      repository: http://localhost:10191
-      version: 0.1.0
-      condition: mariadb.enabled
-    - name: backup
-      repository: http://localhost:10191
-      version: 0.1.0
-      condition: backup.enabled
