--- a/helm/iam-db/charts/mariadb/templates/statefulset.yaml
+++ b/helm/iam-db/charts/mariadb/templates/statefulset.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.persistentvolume.create }}
+{{- if .Values.persistentvolume.create -}}
 # pv
 kind: PersistentVolume
 apiVersion: v1
@@ -12,7 +12,6 @@ spec:
     storage: {{ .Values.persistentvolume.size }}
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Delete
   hostPath:
     path: {{ .Values.persistentvolume.path }}
 ---
@@ -31,14 +30,14 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistentvolume.size }}
-  {{- if .Values.persistentvolume.selector }}
+  {{- if .Values.persistentvolume.create }}
   selector:
     matchLabels:
       {{- include "mariadb.selectorLabels" . | nindent 6 }}
   {{- end }}
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: {{ include "mariadb.fullname" . }}
   labels:
@@ -59,6 +58,7 @@ spec:
       labels:
         {{- include "mariadb.selectorLabels" . | nindent 8 }}
     spec:
+      hostname:  {{ .Release.Name}}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -78,12 +78,14 @@ spec:
               protocol: TCP
           envFrom:
             - secretRef:
-                name: {{ .Values.global.secret }}-harvester-envs
+                name: {{ .Values.global.secret }}-iam-db-envs
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: {{ include "mariadb.fullname" . }}-data
+            - mountPath: /docker-entrypoint-initdb.d/
+              name: {{ include "mariadb.fullname" . }}-initdb
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -100,3 +102,6 @@ spec:
         - name: {{ include "mariadb.fullname" . }}-data
           persistentVolumeClaim:
             claimName: {{ include "mariadb.fullname" . }}
+        - name: {{ include "mariadb.fullname" . }}-initdb
+          secret:
+              secretName: {{ .Values.global.secret }}-iam-initdb
